# vakraft

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/vakraft/blocks/: block.hpp
include/vakraft/blocks/models/: block_factory.hpp  blockmodel.hpp
include/vakraft/engine/: core.hpp  raycast.hpp
include/vakraft/world/: chunk.hpp  random.hpp  world.hpp
src/: main.cpp
src/blocks/: block.cpp
src/blocks/models/: block_factory.cpp
src/engine/: core.cpp  raycast.cpp
src/world/: chunk.cpp  world.cpp
